--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,7 @@
+*{
+  text-decoration: none;
+    /* background-color: black; */
+}
 .main {
   background-color: white;
   height: 100vh;
@@ -5,4 +9,65 @@
 }
 li {
   list-style: none;
+}
+.login-left{
+  background-color: red;
+  height:100%;
+  width:30%
+}
+.login-right{
+  background-color: beige;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.login-container{
+  width: 60%;
+  margin: 0 auto;
+  height: 100%;
+}
+.login{
+  display: flex;
+  height: 100vh;
+
+}
+.signup-fields{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 10px;
+}
+.signup-buttons{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+  margin-top: 10px;
+  gap:2px
+}
+@media(max-width:767px){ 
+  .login-left{
+  display: none;
+  }
+  .login-right{
+    background-color: beige;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+}
+
+.data{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  gap:10px
 }
