--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,6 @@
     /* background-color: black; */
 }
 .main {
-  background-color: white;
   height: 100vh;
   width: 100vw;
 }
@@ -11,13 +10,17 @@ li {
   list-style: none;
 }
 .login-left{
-  background-color: red;
   height:100%;
-  width:30%
+  width:50%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+svg{
+  width: 60%;
 }
 .login-right{
-  background-color: beige;
-  width: 70%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -70,4 +73,7 @@ li {
   align-items: center;
   height: 100vh;
   gap:10px
+}
+.sign-up-components button{
+  margin-right: 5px;
 }
